complete research project

--- a/notebooks/02.prediction_pipeline.ipynb
+++ b/notebooks/02.prediction_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d6484f44-412d-4568-a5ae-9ee9cd1e73b3",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5adfba97-0d9a-495d-9365-890865b77fb4",
    "metadata": {},
    "outputs": [],
@@ -29,18 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "77a8ea50-45be-421c-9a84-83eaa8d92bd5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../static/model/model.pickle', 'rb') as f:\n",
+    "with open('../static/model/modelmnb.pickle', 'rb') as f:\n",
     "    model = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "17b7a7a4-637b-49c8-8694-1ce568792251",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "7042f350-4659-41f7-a481-6a1494e836a0",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "ad551537-fb70-4b4e-b8a6-517a988e6ff7",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "3753139d-f1dd-48ed-9ddf-6c260f2bc622",
    "metadata": {},
    "outputs": [],
@@ -106,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "ebb1c329-31b2-422b-8131-f15f684c3d3b",
+   "execution_count": 9,
+   "id": "96e24159-0137-485a-a8f7-243d0a9e3718",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "9ba5d29b-8b6e-4119-9822-bbdfffef4e59",
    "metadata": {},
    "outputs": [],
@@ -145,9 +145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "f70e1768-6ad1-485c-ac34-f1d01b35840e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -155,13 +157,38 @@
        "'negative'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "txt = \"set na\"\n",
+    "txt = \"mekanam wedak na ganna epa\"\n",
+    "preprocessed_txt = preprocessing(txt)\n",
+    "vectorized_txt = vectorizer(preprocessed_txt, tokens)\n",
+    "prediction = get_prediction(vectorized_txt)\n",
+    "prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b3bc9f38-ee3f-429e-88f6-fb29e4073001",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'positive'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "txt = \"light eka color full lassanai\"\n",
     "preprocessed_txt = preprocessing(txt)\n",
     "vectorized_txt = vectorizer(preprocessed_txt, tokens)\n",
     "prediction = get_prediction(vectorized_txt)\n",
